--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
+    "moment": "^2.30.1",
     "mysql2": "^3.14.1",
     "nodemon": "^3.1.10"
   }
