--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "bcryptjs": "^3.0.2",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "moment": "^2.30.1",
     "mysql2": "^3.14.1",
